--- a/src/app.css
+++ b/src/app.css
@@ -27,7 +27,8 @@ body * {
 	@apply bg-white/50 p-5 rounded-2xl shadow-xl;
 }
 
-input {
+input,
+textarea {
 	@apply rounded-2xl border-[1.5px] border-gray-500/50 px-2 py-1 focus:border-x-0 focus:border-t-0 focus:border-b-[3px] focus:rounded-none focus:!outline-none focus:bg-transparent duration-150;
 }
 
@@ -44,4 +45,32 @@ input.search {
 
 .pagination-btn.active {
 	@apply !bg-gray-500  cursor-not-allowed;
+}
+
+.input-container {
+	@apply w-full flex flex-col gap-0 relative;
+}
+
+.input-container label {
+	@apply text-[0.8rem] ml-2;
+}
+
+.btn-group {
+	@apply flex flex-row w-full;
+}
+
+.btn-group button {
+	@apply bg-blue-500 text-white py-1 px-3 first:rounded-l-2xl last:rounded-r-2xl hover:bg-cyan-500;
+}
+
+.btn-group button.active {
+	@apply bg-pink-500;
+}
+
+.tag-btn {
+	@apply text-[0.7rem] pl-2 bg-blue-500 rounded-xl text-white flex flex-row hover:bg-teal-500;
+}
+
+.tag-btn span {
+	@apply my-auto;
 }
